# ZenPy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
ZenPy/zenpy/: cli.py  linux.py  smu.py  windows.py
examples/: demo.py  monitor_pmtable.py  reapply_loop.py
tests/: test_api.py  test_apply.py  test_cli.py  test_facade.py  test_hardware.py  test_linux.py  test_pmtable.py  test_runner.py  test_update.py
zenmaster/: __init__.py  apply.py  cli.py  errors.py  hardware.py  linux.py  macos.py  mailbox.py  pmtable.py  runner.py  smu.py  table.py  update.py  windows.py
