[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zenmaster"
version = "0.3.0"
requires-python = ">=3.10"
description = "Adjust power management settings for Ryzen CPUs on Linux and Windows"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "oxGorou", email = "lekhanhbinh2901@gmail.com" }]
keywords = ["amd", "ryzen", "ryzenadj", "smu", "power-management", "tuning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/HorizonUnix/ZenMaster"
Repository = "https://github.com/HorizonUnix/ZenMaster"
"Bug Tracker" = "https://github.com/HorizonUnix/ZenMaster/issues"
Changelog = "https://github.com/HorizonUnix/ZenMaster/blob/main/CHANGELOG.md"

[project.scripts]
zenmaster = "zenmaster.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zenmaster*"]

[tool.setuptools.package-data]
zenmaster = ["assets/AMD/PawnIO/*.bin", "py.typed"]
